--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,13 +12,14 @@
   <!-- Google Fonts for a modern look -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body data-spy="scroll" data-target="#navbarNav" data-offset="80">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#home">Harvest Note</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon" style="color:#fff;"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -45,10 +47,22 @@
             <a href="#" class="btn btn-custom">Windows</a>
             <a href="#" class="btn btn-custom ml-3">Linux</a>
           </div>
-          <div class="version-text">V1.0</div>
-          <div class="mt-4">
-            <a href="#" class="btn btn-donate">Donate</a>
+          <div class="version-text">V: 1.0</div>
+          <!-- Donate button section -->
+          <div class="mt-4 text-center">
+            <form action="https://www.paypal.com/donate" method="post" target="_top">
+              <input type="hidden" name="business" value="399CWSF78ZURC" />
+              <input type="hidden" name="no_recurring" value="0" />
+              <input type="hidden" name="item_name"
+                value="Your support fuels my work and inspires future projects. Thanks for believing in me!" />
+              <input type="hidden" name="currency_code" value="USD" />
+              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0"
+                name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"
+                style="transform: scale(1.5); transform-origin: center;" />
+              <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+            </form>
           </div>
+
         </div>
       </div>
     </div>
@@ -59,7 +73,10 @@
     <div class="container">
       <h2>About Harvest Note</h2>
       <p>
-        Harvest Note embraces the warm tones of harvest season with earthy colors and inviting aesthetics. Enjoy seamless downloads for your favorite operating system with an experience that is both naturally elegant and modernly refined.
+        Harvest Note offers a streamlined alternative to conventional notepads. It enables you to effortlessly compose
+        and save your notes as plain text files,
+        while also providing customizable background colors to enhance your note-taking experience with a personalized
+        touch.
       </p>
     </div>
   </section>
@@ -69,4 +86,5 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
