Added demo section and icon

--- a/index.html
+++ b/index.html
@@ -15,25 +15,30 @@
 
 <body data-spy="scroll" data-target="#navbarNav" data-offset="80">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg fixed-top">
+  <div class="container">
       <a class="navbar-brand" href="#home">Harvest Note</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon" style="color:#fff;"></span>
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon" style="color:#fff;"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#about">About</a>
+              </li>
+              <!-- New Demo Link -->
+              <li class="nav-item">
+                  <a class="nav-link" href="#demo">Demo</a>
+              </li>
+          </ul>
       </div>
-    </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Home Section -->
   <section id="home">
@@ -80,6 +85,23 @@
       </p>
     </div>
   </section>
+
+<!-- Demo Section -->
+<section id="demo">
+  <div class="container text-center">
+      <h2 style="color: #5a4e3c;">Discover Harvest Note in Action</h2>
+      <p style="color: #5a4e3c;">Experience the simplicity and functionality of Harvest Note through this demonstration video. See how it can enhance your note-taking and organization, making it effortless to save and customize your thoughts.</p>
+
+      <!-- Embedded Video -->
+      <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/your-video-id" 
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen></iframe>
+      </div>
+  </div>
+</section>
+
+
 
   <!-- Bootstrap JS and dependencies -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
