--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Harvest Note</title>
+
+  <link rel="icon" href="harvest-ico-2.ico" type="image/x-icon">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <!-- External CSS -->
@@ -17,7 +20,10 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#home">Harvest Note</a>
+      <a class="navbar-brand d-flex align-items-center" href="#home">
+        <img src="harvest-ico-2.ico" alt="Harvest Note Icon" style="width: 30px; height: 30px; margin-right: 10px;">
+        Harvest Note
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon" style="color:#fff;"></span>
