Adding windows version to download

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col-md-8 text-center">
           <div class="top-text">Download</div>
           <div class="button-group d-flex justify-content-center flex-wrap mb-3">
-            <a href="#" class="btn btn-custom">Windows</a>
+            <a href="Programs/Harvest Note.exe" class="btn btn-custom">Windows</a>
             <a href="#" class="btn btn-custom ml-3">Linux</a>
           </div>
           <div class="version-text">V: 1.0</div>
