Linux button redo

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="col-md-8 text-center">
           <div class="top-text">Download</div>
           <div class="button-group d-flex justify-content-center flex-wrap mb-3">
-            <a href="Programs/Harvest Note.exe" class="btn btn-custom">Windows</a>
-            <a href="Programs/Harvest Note" class="btn btn-custom ml-3">Linux</a>
+            <a href="Programs/Harvest Note.exe" download class="btn btn-custom">Windows</a>
+            <a href="Programs/Harvest Note" download class="btn btn-custom ml-3">Linux</a>
           </div>
           <div class="version-text">V: 1.0</div>
           <!-- Donate button section -->
