Took out zip and embedded video demo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="col-md-8 text-center">
           <div class="top-text">Download</div>
           <div class="button-group d-flex justify-content-center flex-wrap mb-3">
-            <a href="Programs/Harvest Note.zip" download class="btn btn-custom">Windows</a>
+            <a href="Programs/Harvest Note.exe" download class="btn btn-custom">Windows</a>
             <!-- <a href="Programs/Harvest Note" download class="btn btn-custom ml-3">Linux</a> -->
           </div>
           <div class="version-text">V: 1.0</div>
@@ -98,9 +98,7 @@
       <!-- Embedded Video -->
       <h2 style="color: #ffffff;">Demonstration</h2>
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://youtu.be/wTK5F4ee8L8" 
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-                allowfullscreen></iframe>
+        <iframe width="1296" height="729" src="https://www.youtube.com/embed/wTK5F4ee8L8" title="The Next Notepad Alternative?!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
   </section>
